force-app/main/default/objects/Distribution_Group_Member__c/Distribution_Group_Member__c.object-meta.xml
<CustomObject>
    <label>Distribution Group Member</label>
    <nameField>
        <displayFormat>DGM-{000}</displayFormat>
        <label>Distribution Group Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>