force-app/main/default/objects/Distribution_Group_Member__c/fields/Eligible__c.field-meta.xml
<CustomField>
    <fullName>Eligible__c</fullName>
    <formula>$Setup.Open_Opp_Limit__c.Staging__c &gt; $User.Number_of_Staging_Opps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible</label>
    <type>Checkbox</type>
</CustomField>