force-app/main/default/objects/Distribution_Group_Member__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <formula>Total_Open__c / Rep_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last calculated Load Percentage</inlineHelpText>
    <label>Load %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>