force-app/main/default/objects/Distribution_Group_Member__c/fields/Next_Up__c.field-meta.xml
<CustomField>
    <fullName>Next_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Next Up</label>
    <type>Checkbox</type>
</CustomField>