force-app/main/default/objects/Distribution_Group_Member__c/fields/Rep_Limit__c.field-meta.xml
<CustomField>
    <fullName>Rep_Limit__c</fullName>
    <label>Rep Limit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>