force-app/main/default/objects/Distribution_Group_Member__c/fields/Total_Open__c.field-meta.xml
<CustomField>
    <fullName>Total_Open__c</fullName>
    <label>Total Open</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>